# haskell-in-haste

./: .ghci  .travis.yml  Avoid.md  Introduction.md  README.md  Setup.hs  haskell-in-haste.cabal  nohup.out  stack.yaml
doc/: 01_intro.html  01_intro.md  02_basics.html  02_basics.md  03_tools.html  03_tools.md  04_bots.html  04_bots.md  05_extra.html  05_intermediate.html  06_advanced.html  README.md
js/: remark.js  styles.css
main/: chat.hs
src/: Chat.hs  Example.hs  Main.hs
src/Chat/: Data.hs  Web.hs
src/Chat/Bot/: Calculator.hs  Cipher.hs  Guess.hs  Hangman.hs  MarcoPolo.hs  Ping.hs  TicTacToe.hs  Triangle.hs  Vote.hs  WordCount.hs
src/Chat/Bot/Answer/: Calculator.hs  Cipher.hs  Guess.hs  Hangman.hs  Ping.hs  TicTacToe.hs  Vote.hs  WordCount.hs
src/Chat/Bot/Misc/: Calculator.hs  Cipher.hs  Guess.hs  Hangman.hs  TicTacToe.hs  Vote.hs
src/Chat/Bot/Run/: Calculator.hs  Cipher.hs  Guess.hs  Hangman.hs  TicTacToe.hs  Vote.hs  WordCount.hs
static/js/: chat.js
static/style/: chat.css
test/: doctests.hs
