name:                haskell-in-haste
version:             0.1.0.0
license:             BSD3
author:              Charles O'Farrell
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-in-haste-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-markup                    >= 0.7        && <0.9
                     , blaze-html                      >= 0.7        && <0.9
                     , scotty                          == 0.10.*
                     , scotty-cookie                   == 0.1.*
                     , shakespeare                     == 2.0.*
                     , text                            == 1.2.*
                     , time                            == 1.5.*
                     , transformers                    == 0.4.*
  default-language:    Haskell2010
