name:                haskell-in-haste
version:             0.1.0.0
license:             BSD3
author:              Charles O'Farrell
category:            Web
build-type:          Custom
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  default-language:    Haskell2010

  build-depends:       base
                     , blaze-markup                    >= 0.7        && <0.9
                     , blaze-html                      >= 0.7        && <0.9
                     , random                          == 1.1.*
                     , scotty                          == 0.10.*
                     , scotty-cookie                   == 0.1.*
                     , shakespeare                     == 2.0.*
                     , text                            == 1.2.*
                     , time                            == 1.5.*
                     , transformers                    == 0.4.*
                     , wai-middleware-static           == 0.7.*

  exposed-modules:     Chat
                     , Chat.Data
                     , Chat.Web

                     , Chat.Bot.Calculator
                     , Chat.Bot.Answer.Calculator
                     , Chat.Bot.Misc.Calculator
                     , Chat.Bot.Run.Calculator

                     , Chat.Bot.Cipher
                     , Chat.Bot.Answer.Cipher
                     , Chat.Bot.Misc.Cipher
                     , Chat.Bot.Run.Cipher

                     , Chat.Bot.Guess
                     , Chat.Bot.Answer.Guess
                     , Chat.Bot.Misc.Guess
                     , Chat.Bot.Run.Guess

                     , Chat.Bot.Hangman
                     , Chat.Bot.Answer.Hangman
                     , Chat.Bot.Misc.Hangman
                     , Chat.Bot.Run.Hangman

                     , Chat.Bot.Ping
                     , Chat.Bot.Answer.Ping

                     , Chat.Bot.TicTacToe
                     , Chat.Bot.Answer.TicTacToe
                     , Chat.Bot.Misc.TicTacToe
                     , Chat.Bot.Run.TicTacToe

                     , Chat.Bot.Vote
                     , Chat.Bot.Answer.Vote
                     , Chat.Bot.Misc.Vote
                     , Chat.Bot.Run.Vote

test-suite           doctests
  type:              exitcode-stdio-1.0
  main-is:           doctests.hs
  ghc-options:       -threaded
  default-language:  Haskell2010
  hs-source-dirs:    test

  build-depends:
                       base
                     , haskell-in-haste
                     , directory                      == 1.2.*
                     , doctest                        == 0.10.*
                     , filepath                       == 1.4.*
                     , QuickCheck                     == 2.8.*
                     , template-haskell
